# Travel-Tour-Proj-Sem2-2026

./: .amriacache.sqlite  Cal.py  Dest_Forecasting_Data_Get.py  README.md  app.py  arima_model.py  heroku.yml  main.py  poisUpdate.py  pyproject.toml  requirements.txt  weather_req_holiday.py
Dataset/Crowd/: .cache.sqlite  ETL_Pipline_Gathering_data.ipynb  crowd_desnity_ARMIA_Tourism_Forecast.ipynb  user_KNN_Tourism_Recommendation.ipynb
Dataset/Crowd/Flight/: flight_booking_collector_serpAPI.ipynb
Dataset/Crowd/arima_models/: IRDUB_1_arima.pkl  IRDUB_4_arima.pkl
Dataset/Crowd/data_weather/Final/: Auckland_Pedestrian_Hourly.csv  Dublin_Pedestrian_Hourly.csv
arima_models/: IRDUB_3_arima.pkl
backend/: .amriacache.sqlite  arima_model.py  knn_model.py  main.py  pyproject.toml  weather_req_holiday.py
backend/Dataset/Crowd/: crowd_desnity_ARMIA_Tourism_Forecast.ipynb
backend/Dataset/Crowd/Flight/: flight_booking_collector_serpAPI.ipynb
backend/Dataset/Crowd/arima_models/: IRDUB_1_arima.pkl  IRDUB_3_arima.pkl  NZAUK_2_arima.pkl
backend/Dataset/Crowd/data_weather/: Global_Tourist_Attractions.csv
backend/arima_models/: IRDUB_5_arima.pkl  NZAUK_1_arima.pkl  NZAUK_4_arima.pkl  NZAUK_5_arima.pkl
frontend/: Dest_Forecasting_Data_Get.py  app.py  date_conversion.py  poisUpdate.py  requirements.txt
knn_model/: loc_knn.pkl
